--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "ip": "~0.0.4"
   },
   "devDependencies": {
-    "nodeunit": "~0.7.4"
+    "nodeunit": "~0.7.4",
+    "pcap-parser": "~0.2.1"
   },
   "repository": {
     "type": "git",
